--- a/COSCI224 Machine Learning 3 Notebooks/HW1 - CNN_LubertTest.ipynb
+++ b/COSCI224 Machine Learning 3 Notebooks/HW1 - CNN_LubertTest.ipynb
@@ -373,9 +373,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "mlgpu",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
